--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/2/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="/2/javascript.js"></script>
     <title>~ F.lip ~</title>
     <link rel="shortcut icon" href="/5/favicon.ico" type="image/x-icon">
